--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
+
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
@@ -52,4 +55,5 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel-android:2.2.1'
     implementation 'com.github.kittinunf.fuel:fuel-coroutines:2.2.1'
     implementation 'com.github.kittinunf.fuel:fuel-gson:2.2.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 }
